arquitectura de carpetas

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
     top: 60px;
     display: flex;
     flex-direction: column;
-    background: #3b4da7;
+    background: #21b972d7;
     left: 0;
     width: 100%;
     height: 100%;
