--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 }
 
 .Navbar > .nav-items > a {
-  color: #000;
+  color: #ffffff;
   font-size: 18px;
   text-decoration: none;
   margin: 15px;
@@ -39,7 +39,7 @@
   bottom: 0;
   width: 0;
   height: 2px;
-  background: #000;
+  background: #fff;
   transition: all 0.45s;
 }
 
