Funcionalidad del Carrito de Compras

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   justify-content: space-between;
   flex-direction: row-reverse;
   align-items: center;
-  background: #21b972a5;
-  border-bottom: solid #21b972;
+  background: #21b972ef;
+  border-bottom: solid #036108;
 }
 
 .Navbar > .nav-logo {
